--- a/xustup.html
+++ b/xustup.html
@@ -14,18 +14,16 @@
             <nav>
              <h1 class="logo"> Խուստուփ </h1> 
              <ul>
-             <li><a href="#home" type="button" class="cod">Գլխավոր էջ</a></li>
-             <li><a href="#about"type="button" class="cod">Պատմությունը</a> </li>
-             <li><a href="#servise"  type="button"  class="my"> Անձնական էջ </a></li>
-             <li><a href="#" type="button" class="cod">Ավանդապատում</a></li>
-             <li><a href="#contact-me" type="button" class="cod">Կապ</a></li>
+                <li><a href="#home" type="button" class="cod">Գլխավոր էջ</a></li>
+                <li><a href="#about"type="button" class="cod">Պատմությունը</a> </li>
+                <li><a href="#servise"  type="button"  class="my"> Անձնական էջ </a></li>
+                <li><a href="#" type="button" class="cod">Ավանդապատում</a></li>
+                <li><a href="#contact-me" type="button" class="cod">Կապ</a></li>
              </ul>
-             <button>
-                Գրանցվիր
-             </button>
+             <button>Գրանցվիր</button>
             </nav>
              <div id="wrapper">
-<div class="text">
+<div class="text"> 
     <h3> Սյունիքի  մարզ </h3>
     <h3> քաղաք  Կապան</h3>
 </div>
